Bug 179016 - clicked on icon and it crashed
Summary: clicked on icon and it crashed
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Urs Wolfer
URL:
Keywords:
: 177964 191641 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-12-29 03:32 UTC by Ray Sims
Modified: 2009-05-05 19:02 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ray Sims 2008-12-29 03:32:48 UTC
Version:           4.1.3 (using KDE 4.1.3)
OS:                Linux
Installed from:    SuSE RPMs

Application: KRDC (krdc), signal SIGSEGV
[?1034h(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 0xb464ab90 (LWP 5599)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[KCrash handler]
#6  0xb672482d in QAction::icon() const () from /usr/lib/libQtGui.so.4
#7  0x08074ccf in _start ()
Comment 1 Urs Wolfer 2008-12-29 11:19:38 UTC
The provided backtrace is not useful. Please see:
http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports

How can you reproduce this crash?
Comment 2 FiNeX 2009-02-01 00:04:14 UTC
*** Bug 177964 has been marked as a duplicate of this bug. ***
Comment 3 Jonathan Thomas 2009-03-13 18:16:50 UTC
Here's a backtrace for this crash we got downstream at https://launchpad.net/bugs/342241

#0  0xb6d90bed in QAction::icon () from /usr/lib/libQtGui.so.4
#1  0x080793db in MainWindow::createStartPage (this=0x9994c78)
    at /build/buildd/kdenetwork-4.2.1/krdc/mainwindow.cpp:976
	startWidget = (struct QWidget *) 0x9a879a8
	startLayout = (struct QVBoxLayout *) 0x9a64ad8
	headerLabel = (struct QLabel *) 0x9a9ae30
	headerIconLabel = (struct QLabel *) 0x9a0a108
	vncConnectButton = (class KPushButton *) 0x9a66468
	nxConnectButton = (class KPushButton *) 0x9998628
	zeroconfButton = <value optimized out>
#2  0x0807b040 in MainWindow (this=0x9994c78, parent=0x0)
    at /build/buildd/kdenetwork-4.2.1/krdc/mainwindow.cpp:143
	remoteDesktopsDockWidget = (struct QDockWidget *) 0x9a7b2c0
	fontMetrics = {d = 0x9921770}
#3  0x0807fdd7 in main (argc=3, argv=0xbfa02934)
    at /build/buildd/kdenetwork-4.2.1/krdc/main.cpp:63
	aboutData = {d = 0x98c26b0}
	options = {d = 0x98cb358}
	app = {<> = {<No data fields>}, static staticMetaObject = {d = {
      superdata = 0xb7624108, stringdata = 0xb79d20e0 "KApplication", 
      data = 0xb79d2280, extradata = 0x0}}, static loadedByKdeinit = false, 
  static KApp = 0xbfa02780, d = 0x99175d0}
	mainwindow = (class MainWindow *) 0x9994c78
	args = (KCmdLineArgs *) 0xb6522ca5
	__PRETTY_FUNCTION__ = "int main(int, char**)"
Comment 4 Urs Wolfer 2009-03-15 13:25:10 UTC
SVN commit 939615 by uwolfer:

Fix a possible crash when a protocol support has not been built. Only valid for 4.2 branch.

BUG:179016

 M  +10 -13    mainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=939615
Comment 5 Dario Andres 2009-05-05 19:02:42 UTC
*** Bug 191641 has been marked as a duplicate of this bug. ***