Fix a possible crash when a protocol support has not been built. Only valid for 4.2 branch.

BUG:179016

svn path=/branches/KDE/4.2/kdenetwork/krdc/; revision=939615